// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2em",
    },
    "medium": Object {
      "line-height": "1.5em",
    },
    "small": Object {
      "line-height": "1em",
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": ".5rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when custom config is provided when the custom config provides a new value should add the value and not amend any existing values 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2em",
    },
    "medium": Object {
      "line-height": "1.5em",
    },
    "small": Object {
      "line-height": "1em",
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "extrasmall": Object {
      "font-size": ".25rem",
    },
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when no custom config is provided should return the default config 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2em",
    },
    "medium": Object {
      "line-height": "1.5em",
    },
    "small": Object {
      "line-height": "1em",
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;
